--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,11 +7,13 @@ edition = "2021"
 
 [dependencies]
 blake3 = "1.2.0"
+hex = "0.4.3"
+hex-literal = "0.3.1"
+rand = "0.8.4"
+rs_merkle = "1.1.0"
+#sha3 = "0.9.1"
+sha3 = "0.10.0"
 stdcode = "0.1.2"
 themelio-stf = "0.7.2"
+#themelio-stf = "0.9.7"
 tmelcrypt = "0.2.3"
-hex = "0.4.3"
-rs_merkle = "1.1.0"
-rand = "0.8.4"
-sha3 = "0.9.1"
-hex-literal = "0.3.1"
