--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,10 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[dependencies.tokio]
+version = "1.16.1"
+features = ["full"]
+
 [dependencies]
 blake3 = "1.2.0"
 ethers = "0.6.2"
@@ -14,6 +18,7 @@ hex-literal = "0.3.1"
 rand = "0.8.4"
 rayon = "1.5.1"
 rs_merkle = "1.1.0"
+serde_json = "1.0.78"
 sha3 = "0.10.0"
 stdcode = "0.1.2"
 themelio-stf = "0.9.7"
