--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ features = ["full"]
 
 [dependencies]
 blake3 = "1.2.0"
+ed25519-compact = "1.0.11"
 ethers = "0.6.2"
 hex = "0.4.3"
 hex-literal = "0.3.1"
