--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ version = "1.16.1"
 features = ["full"]
 
 [dependencies]
+bincode = "1.3.1"
 blake3 = "1.2.0"
 ed25519-compact = "1.0.11"
 ethers = "0.6.2"
