--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,8 +33,11 @@ jobs:
       - name: Install Musl
         run: sudo apt install -y musl musl-tools
 
-      - name: Update Rust
-        run: rustup update
+      - name: Install Rustup
+        run: curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
+
+      - name: Add Rustup To Path
+        run: echo "$HOME/.cargo/bin" >> $GITHUB_PATH
 
       - name: Add Musl Target
         run: rustup target add x86_64-unknown-linux-musl
