--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,7 +15,7 @@ jobs:
     runs-on: self-hosted
 
     container:
-      image: ghcr.io/cross-rs/x86_64-unknown-linux-musl:latest
+      image: rustembedded/cross:x86_64-unknown-linux-musl
 
     steps:
       - uses: actions/checkout@v2
