--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,4 +31,4 @@ jobs:
 #          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
 
       - name: Run Musl Build
-        run: cross build --target x86_64-unknown-linux-musl --verbose
+        run: cargo build --target x86_64-unknown-linux-musl --verbose
