--- a/.github/workflows/musl-tests.yml
+++ b/.github/workflows/musl-tests.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: self-hosted
 
     container:
-      image: rustembedded/cross:x86_64-unknown-linux-musl
+      image: ekidd/rust-musl-builder:latest
 
     steps:
       - uses: actions/checkout@v2
