--- a/bindings/Cargo.toml
+++ b/bindings/Cargo.toml
@@ -7,6 +7,5 @@ edition = "2021"
 
 [dependencies]
 
-ethers = { git = "https://github.com/gakonst/ethers-rs", default-features = false }
+ethers = { git = "https://github.com/gakonst/ethers-rs", default-features = false, features = ["abigen"] }
 serde_json = "1.0.79"
-
