--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -19,6 +19,7 @@ hex-literal = "0.3.1"
 novasmt = "0.2.17"
 rand = "0.8.4"
 rayon = "1.5.1"
+serde = "1.0.145"
 serde_json = "1.0.78"
 stdcode = "0.1.2"
 themelio-stf = "0.9.7"
