--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "contracts"]
 	path = contracts
 	url = https://github.com/themeliolabs/bridge-sol
+[submodule "covenants"]
+	path = covenants
+	url = https://github.com/themeliolabs/bridge-covenants
