Implemented write_to_cov() and write_to_context().

--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -16,12 +16,14 @@ ethers-solc = { git = "https://github.com/gakonst/ethers-rs" }
 eyre = "0.6.6"
 hex = "0.4.3"
 hex-literal = "0.3.1"
+melorun = "0.7.10"
 novasmt = "0.2.17"
 rand = "0.8.4"
 rayon = "1.5.1"
 regex = "1.6.0"
 serde = "1.0.145"
 serde_json = "1.0.78"
+serde_yaml = "0.9.13"
 stdcode = "0.1.2"
 themelio-stf = "0.9.7"
 themelio-structs = "0.2.0"
