--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -11,8 +11,8 @@ bindings = { path = "../bindings" }
 blake3 = "1.2.0"
 clap = { version = "3.1.15", features = ["derive"] }
 dotenv = "0.15.0"
-ethers = { git = "https://github.com/gakonst/ethers-rs", default-features = false }
-ethers-solc = { git = "https://github.com/gakonst/ethers-rs" }
+ethers = { version = "1.0.2", default-features = false }
+ethers-solc = "1.0.2"
 eyre = "0.6.6"
 hex = "0.4.3"
 hex-literal = "0.3.1"
@@ -25,9 +25,9 @@ serde = "1.0.145"
 serde_json = "1.0.78"
 serde_yaml = "0.9.13"
 stdcode = "0.1.2"
-themelio-stf = "0.9.7"
-themelio-structs = "0.2.0"
-tmelcrypt = "0.2.3"
+themelio-stf = "0.11.13"
+themelio-structs = "0.2.12"
+tmelcrypt = "0.2.6"
 tokio = { version = "1.17.0", features = ["macros"] }
 
 [profile.release]
